[package]
name = "pondoronoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = { version = "0.12", features = ["backend", "draw", "glsl-to-spirv", "random"], default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }
